--- a/index.html
+++ b/index.html
@@ -22,15 +22,12 @@
 </head>
 
 <body>
-
-     <table width=100%><tr height="160">
-	  <td width="210" rowspan="2" valign="bottom"><a href="#imageCredit"><img src="img/PierpontMorganUnicornDetail_m581.010ra_xsm.jpg" width="256" height="180" alt="PierpontMorgan" longdesc="img/PierpontMorganUnicornDetail_m581.010ra.jpg" /></a></td>
-	  <td width="77%" valign="top">
-		 <h1>Coptic Scriptorium</h1></td>
-         <td width="1%" rowspan="2"></td>
-	</tr>
-    <tr>
-      <td><img alt="Seal of the University of the Pacific" align="left" src="img/Seal_Orange_RGB.png" height="62px"/>       <img alt="Humboldt-Universität zu Berlin" src="img/hu_korpling_big.svg" height="62px"/>       <img src="img/neh_logo_horizontal_rgb.jpg" width="252" height="62" alt="neh logo" longdesc="http://www.neh.gov"/></td>
+<div id="wrapper">
+     <table width=100%><tr>
+	  <td width="210" rowspan="2" valign="bottom"><a href="#imageCredit"><img src="img/PierpontMorganUnicornDetail_m581.010ra_xsm.jpg" width="211" height="150" alt="PierpontMorgan" longdesc="img/PierpontMorganUnicornDetail_m581.010ra.jpg" /></a></td>
+      <td width="15"> </td>
+	  <td width="77%"><h1>Coptic Scriptorium</h1>
+	    <img alt="Seal of the University of the Pacific" align="left" src="img/Seal_Orange_RGB.png" height="62px"/>       <img src="img/Georgetown_university_seal.gif" width="52" height="62px" alt="GeorgetownUniversitySeal" /><img alt="Humboldt-Universität zu Berlin" src="img/hu_korpling_big.svg" height="62px"/>       <img src="img/neh_logo_horizontal_rgb.jpg" width="252" height="62px" alt="neh logo" longdesc="http://www.neh.gov"/></td>
     </tr>
 		</table>
 
@@ -54,9 +51,9 @@
 				shape="rect">Caroline T.
 				Schroeder</a><span > </span>(University of the Pacific)
 				and<span > </span><a
-				href="http://www.linguistik.hu-berlin.de/institut/professuren/korpuslinguistik/mitarbeiter-innen-en/amir/"
+				href="http://corpling.uis.georgetown.edu/amir/"
 				shape="rect">Amir
-				Zeldes</a><span > </span>(Humboldt University, Berlin). <a href="acknowledgements.html#team">The team is constantly growing.</a></p>
+				Zeldes</a><span > </span>(Georgetown University). <a href="acknowledgements.html#team">The team is constantly growing.</a></p>
 		<p>Coptic SCRIPTORIUM provides a platform for interdisciplinary and computational research
 			in texts in the Coptic language, particularly the Sahidic dialect.  As an open-source,
 			open-access initiative, the SCRIPTORIUM technologies and corpus function as a
@@ -96,7 +93,7 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
   	<div class="css-treeview">
 	<ul>
 		<li><input class="folder" type="checkbox" id="ex-q" /><label class="folder" for="ex-q">
-  Click here for the example queries (click the magnifying glass next to each  query to get started). </label>
+  Click here for the example queries (click the magnifying glass next to each query to get started). </label>
   <ul  class="example_queries">
     <li> Search for <strong>Greek verbs</strong> in multiple corpora: <br/>
       <a href="https://korpling.german.hu-berlin.de/annis3/scriptorium#_q=cG9zPSJWIiAmIHNvdXJjZV9sYW5nPSJHcmVlayIgJiAjMSBfPV8jMg&amp;_c=U2hlbm91dGUuYTIyLGFicmFoYW0ub3VyLmZhdGhlcixhcG9waHRoZWdtYXRhLnBhdHJ1bS4xMSxCZXNhLmxldHRlcnM&amp;cl=5&amp;cr=5&amp;s=0&amp;l=10&amp;_seg=ZGlwbF93b3Jk" target="_blank"><img src="img/search.gif" alt="search"/></a><tt>pos=&quot;V&quot; &amp; source_lang=&quot;Greek&quot; &amp; #1 _=_ #2</tt></li>
@@ -127,8 +124,8 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 		<li class="search"><a href="https://korpling.german.hu-berlin.de/annis3/scriptorium#_c=U2hlbm91dGUuYTIy" target="_blank">Search the corpus in ANNIS</a> (click <a href="FAQ.html#font" target="new">here</a> if the Coptic characters do not appear properly)</li>
 		<li><input class="folder" type="checkbox" id="a22-dl" /><label class="folder" for="a22-dl">Download entire corpus in the following formats:</label> 
 			<ul>
-			<li><input class="dl" type="button" id="a22-dl1"/><label class="dl" for="a22-dl1"><a href="download/corpora/A22/shenoute.a22_PAULA.zip"> PAULA XML </a></li>
-			<li><input class="dl" type="button" id="a22-dl2"/><label class="dl" for="a22-dl2"><a href="download/corpora/A22/shenoute.a22_relANNIS.zip"> relANNIS </a></li>
+			<li><input class="dl" type="button" id="a22-dl1"/><label class="dl" for="a22-dl1"><a href="download/corpora/A22/shenoute.a22_PAULA.zip"> PAULA XML </a></label></li>
+			<li><input class="dl" type="button" id="a22-dl2"/><label class="dl" for="a22-dl2"><a href="download/corpora/A22/shenoute.a22_relANNIS.zip"> relANNIS </a></label></li>
 			</ul>
 		</li>
 		<!--<li>Metadata record (<a href="">LAUDATIO</a>)</li>-->
@@ -287,8 +284,9 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 		<li><a href="https://www.zotero.org/groups/coptic_scriptorium/items/collectionKey/8IHTW3NZ" target="new">Bibliography</a></li>
 		<li><a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.</li>
 	</ul>
-	<p>The project is supported by the <a href="http://www.neh.gov" target="_blank">National Endowment for the Humanities</a> <a href="http://www.neh.gov/divisions/odh" target="_blank">Office of Digital Humanities</a> and <a href="http://www.neh.gov/divisions/preservation" target="_blank">Division of Preservation and Access</a>, the <a href="www.pacific.edu" target="blank">University of the Pacific</a>, and <a href="http://www.hu-berlin.de" target="_blank">Humboldt University</a>. </p>
-	<p>Page last updated 7 July 2014</p>
+	<p>The project is supported by the <a href="http://www.neh.gov" target="_blank">National Endowment for the Humanities</a> <a href="http://www.neh.gov/divisions/odh" target="_blank">Office of Digital Humanities</a> and <a href="http://www.neh.gov/divisions/preservation" target="_blank">Division of Preservation and Access</a>, the <a href="www.pacific.edu" target="blank">University of the Pacific</a>, <a href="http://www.georgetown.edu" target="_blank">Georgetown University</a>, and <a href="http://www.hu-berlin.de" target="_blank">Humboldt University</a>. </p>
+	<p>Page last updated 29 August 2014</p>
     </div>
+    
     </body>
     </html>   
