--- a/acknowledgments.html
+++ b/acknowledgments.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+<div id="wrapper">
      <table width=100%><tr height="160">
 	  <td width="210" rowspan="2" valign="bottom"><a href="#imageCredit"><img src="img/PierpontMorganUnicornDetail_m581.010ra_xsm.jpg" width="256" height="180" alt="PierpontMorgan" longdesc="img/PierpontMorganUnicornDetail_m581.010ra.jpg" /></a></td>
 	  <td width="77%" valign="top">
@@ -87,6 +88,7 @@
 </p>
 </p>
 <p><a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.</p>
-<p>Page last updated 7 July 2014</p>
+<p>Page last updated 29 August 2014</p>
+</div>
 </body>
 </html>		
