--- a/basicpageformat.html
+++ b/basicpageformat.html
@@ -28,6 +28,7 @@
 </head>
 
 <body>
+<div id="wrapper">
      <table width=100%><tr height="160">
 	  <td width="210" rowspan="2" valign="bottom"><a href="#imageCredit"><img src="img/PierpontMorganUnicornDetail_m581.010ra_xsm.jpg" width="256" height="180" alt="PierpontMorgan" longdesc="img/PierpontMorganUnicornDetail_m581.010ra.jpg" /></a></td>
 	  <td width="77%" valign="top">
@@ -42,7 +43,8 @@
 	<p></p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
-	<p>Page last updated 7 July 2014</p>
+	<p>Page last updated 29 August 2014</p>
+    </div>
     </div>
     </body>
     </html>   
