--- a/index.html
+++ b/index.html
@@ -24,15 +24,14 @@
 <body>
 <div id="wrapper">
      <table width=100%><tr>
-	  <td width="210" rowspan="2" valign="bottom"><a href="#imageCredit"><img src="img/PierpontMorganUnicornDetail_m581.010ra_xsm.jpg" width="211" height="150" alt="PierpontMorgan" longdesc="img/PierpontMorganUnicornDetail_m581.010ra.jpg" /></a></td>
+	  <td width="210" rowspan="3" valign="bottom"><a href="#imageCredit"><img src="img/PierpontMorganUnicornDetail_m581.010ra_xsm.jpg" width="211" height="150" alt="PierpontMorgan" longdesc="img/PierpontMorganUnicornDetail_m581.010ra.jpg" /></a></td>
       <td width="15"> </td>
-	  <td width="77%"><h1>Coptic Scriptorium</h1>
-	    <img alt="Seal of the University of the Pacific" align="left" src="img/Seal_Orange_RGB.png" height="62px"/>       <img src="img/Georgetown_university_seal.gif" width="52" height="62px" alt="GeorgetownUniversitySeal" /><img alt="Humboldt-Universität zu Berlin" src="img/hu_korpling_big.svg" height="62px"/>       <img src="img/neh_logo_horizontal_rgb.jpg" width="252" height="62px" alt="neh logo" longdesc="http://www.neh.gov"/></td>
+	  <td width="77%" valign="bottom"><h1>Coptic Scriptorium</h1>
+      <img alt="Seal of the University of the Pacific" align="left" src="img/Seal_Orange_RGB.png" height="62px" longdesc="http://www.pacific.edu"/>                 <img src="img/Georgetown_university_seal.gif" width="52" height="62px" alt="GeorgetownUniversitySeal" longdesc="http://www.georgetown.edu"/>       <img src="img/neh_logo_horizontal_rgb.jpg" width="252" height="62px" alt="neh logo" longdesc="http://www.neh.gov"/></td>
     </tr>
 		</table>
 
 	<p></p>
-		<p>&nbsp;</p>
 		<p>Coptic SCRIPTORIUM (<span style="text-decoration: underline;">S</span>ahidic<span
 				> </span><span style="text-decoration: underline;"
 				>C</span>orpus<span > </span><span
@@ -53,7 +52,7 @@
 				and<span > </span><a
 				href="http://corpling.uis.georgetown.edu/amir/"
 				shape="rect">Amir
-				Zeldes</a><span > </span>(Georgetown University). <a href="acknowledgements.html#team">The team is constantly growing.</a></p>
+		Zeldes</a><span > </span>(Georgetown University). <a href="acknowledgements.html#team">The team is constantly growing.</a></p>
 		<p>Coptic SCRIPTORIUM provides a platform for interdisciplinary and computational research
 			in texts in the Coptic language, particularly the Sahidic dialect.  As an open-source,
 			open-access initiative, the SCRIPTORIUM technologies and corpus function as a
@@ -76,6 +75,7 @@
 		<p>The latest <a href="http://earlymonasticism.org/category/scriptorium/" target="_blank">release notes and news about the project</a> are on <a href="http://www.earlymonasticism.org" target="_blank">C. Schroeder's blog</a>. <a href="http://youtu.be/rt_Wr5CvHFU" target="new">A video introduction to the project</a>, including how to use ANNIS, is also available.</p>
 		<p>Please read our <a href="FAQ.html" target="new">Frequently Asked Questions</a> for more information on the project, methodologies, and terminology.</p>
 		<p>We hosted a workshop on digital research and scholarship in Coptic at Humboldt University on May 14, 2013.  <a href="workshop2013/workshop2013.html">The program and presentations are available.</a></p>
+		<p><img src="img/GitHub-Mark-32px.png" alt="GitHub_mark" longdesc="www.github.com"/> You can also <a href="https://github.com/CopticScriptorium" target="new">fork us on GitHub</a>.</p>
 <h2>Corpora</h2>
 <p>
 	The corpora below offer some examples of mark-up for diplomatic transcription and normalization.
@@ -252,15 +252,15 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 <ul>
 <li>Scripts and models
 	<ul>
-		<li><a href="https://github.com/CopticScriptorium/Tokenizers/releases/latest">Tokenization script and lexicon</a> (assumes normalized Coptic, see tokenization guidelines)</li>
-		<li><a href="http://www.cis.uni-muenchen.de/~schmid/tools/TreeTagger/">TreeTagger</a> - an open source part-of-speech tagger (<a href="http://www.smo.uhi.ac.uk/~oduibhin/oideasra/interfaces/winttinterface.htm">additional Windows interface WinTreeTagger</a>)</li>
-		<li><a href="https://github.com/CopticScriptorium/Tagger-Part-of-Speech/releases/latest">Coptic TreeTagger training models</a> - for the fine and coarse grained tagsets (see tagging guidelines below)</li>
+		<li><a href="https://github.com/CopticScriptorium/Tokenizers/releases/latest" target="new">Tokenization script and lexicon</a> (assumes normalized Coptic, see tokenization guidelines)</li>
+		<li><a href="http://www.cis.uni-muenchen.de/~schmid/tools/TreeTagger/" target="new">TreeTagger</a> - an open source part-of-speech tagger (<a href="http://www.smo.uhi.ac.uk/~oduibhin/oideasra/interfaces/winttinterface.htm" target="new">additional Windows interface WinTreeTagger</a>)</li>
+		<li><a href="https://github.com/CopticScriptorium/Tagger-Part-of-Speech/releases/latest" target="new">Coptic TreeTagger training models</a> - for the fine and coarse grained tagsets (see tagging guidelines below)</li>
 	</ul></li>
 <li>Documentation
 	<ul>
-		<li><a href="SCRIPTORIUMDiplTranscriptionGuidelines.pdf">Diplomatic Transcription Guidelines</a>(version 1.1.0)</li>
+		<li><a href="SCRIPTORIUMDiplTranscriptionGuidelines.pdf" target="new">Diplomatic Transcription Guidelines</a>(version 1.1.0)</li>
 		<li>Tokenization Guidelines (see sections 3 &amp; 4 of the Transcription Guidelines)</li>
-		<li><a href="scriptorium_tagset_documentation.pdf">Part-of-Speech Tagging Guidelines (version 1.1.0)</a></li>
+		<li><a href="scriptorium_tagset_documentation.pdf" target="new">Part-of-Speech Tagging Guidelines (version 1.1.0)</a></li>
 	</ul>
 </li>
 </ul>
@@ -269,11 +269,11 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 <ul>
 	<li>Coptic encoding converter (converts older text character systems used for fonts such as Coptic and Laser Coptic into standards-compliant Coptic Unicode characters)
 	  <ul>
-		<li><a href="https://github.com/CopticScriptorium/Converters_perl/releases/latest">Simple recoding script in Perl</a> (supports CMCL, Laser Coptic and UTF-8 encoding conversion)</li>
-		<li><a href="https://github.com/CopticScriptorium/Converters/releases/latest">Converter for ASCII encoding / UTF-8</a> of Dirk Van Damme and Gregor Wurst</li>
+		<li><a href="https://github.com/CopticScriptorium/Converters_perl/releases/latest" target="new">Simple recoding script in Perl</a> (supports CMCL, Laser Coptic and UTF-8 encoding conversion)</li>
+		<li><a href="https://github.com/CopticScriptorium/Converters/releases/latest" target="new">Converter for ASCII encoding / UTF-8</a> of Dirk Van Damme and Gregor Wurst</li>
 	</ul>
 	</li>
-	<li><a href="https://korpling.german.hu-berlin.de/p/projects/saltnpepper/wiki/">SaltNPepper</a> - a metamodel based Java framework for multi-format conversion </li>
+	<li><a href="https://korpling.german.hu-berlin.de/p/projects/saltnpepper/wiki/" target="new">SaltNPepper</a> - a metamodel based Java framework for multi-format conversion </li>
   <li><a href="http://www.exmaralda.org/exceladdin.html">Excel-Plugin</a> for importing and exporting EXMARaLDA XML, SGML, PAULA XML and subsets of TEI XML</li>
 
 </ul>
@@ -285,7 +285,7 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 		<li><a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.</li>
 	</ul>
 	<p>The project is supported by the <a href="http://www.neh.gov" target="_blank">National Endowment for the Humanities</a> <a href="http://www.neh.gov/divisions/odh" target="_blank">Office of Digital Humanities</a> and <a href="http://www.neh.gov/divisions/preservation" target="_blank">Division of Preservation and Access</a>, the <a href="www.pacific.edu" target="blank">University of the Pacific</a>, <a href="http://www.georgetown.edu" target="_blank">Georgetown University</a>, and <a href="http://www.hu-berlin.de" target="_blank">Humboldt University</a>. </p>
-	<p>Page last updated 29 August 2014</p>
+	<p>Page last updated 5 September 2014</p>
     </div>
     
     </body>
