--- a/acknowledgments.html
+++ b/acknowledgments.html
@@ -23,19 +23,21 @@
 <div id="wrapper">
      <table width=100%><tr height="160">
 	  <td width="210" rowspan="2" valign="bottom"><a href="#imageCredit"><img src="img/PierpontMorganUnicornDetail_m581.010ra_xsm.jpg" width="256" height="180" alt="PierpontMorgan" longdesc="img/PierpontMorganUnicornDetail_m581.010ra.jpg" /></a></td>
-	  <td width="77%" valign="top">
+	  <td width="77%" valign="bottom">
 		 <h1>Coptic Scriptorium</h1></td>
          <td width="1%" rowspan="2"></td>
 	</tr>
     <tr>
-      <td><img alt="Seal of the University of the Pacific" align="left" src="img/Seal_Orange_RGB.png" height="62px"/>       <img alt="Humboldt-Universität zu Berlin" src="img/hu_korpling_big.svg" height="62px"/>       <img src="img/neh_logo_horizontal_rgb.jpg" width="252" height="62" alt="neh logo" longdesc="http://www.neh.gov"/></td>
+      <td><img alt="Seal of the University of the Pacific" align="left" src="img/Seal_Orange_RGB.png" height="62px"/>  <img src="img/Georgetown_university_seal.gif" width="52" height="62px" alt="GeorgetownUniversitySeal" longdesc="http://www.georgetown.edu"/> <img src="img/neh_logo_horizontal_rgb.jpg" width="252" height="62" alt="neh logo" longdesc="http://www.neh.gov"/></td>
     </tr>
 		</table>
-	
-	<p>&nbsp;</p>
-		<p>Support for  <a href="index.html">Coptic SCRIPTORIUM</a> has been provided by:</p>
+
+	<p></p>
+
+  <p>Support for  <a href="index.html">Coptic SCRIPTORIUM</a> has been provided by:</p>
 		<ul>
 		  <li>The <a href="http://www.neh.gov" target="_blank">National Endowment for the Humanities</a> <a href="http://www.neh.gov/divisions/odh" target="_blank">Office of Digital Humanities</a> and <a href="http://www.neh.gov/divisions/preservation" target="_blank">Division of Preservation and Access</a>,</li>
+		  <li>The Department of Linguistics, Georgetown University</li>
 		  <li>The Institute for German Language and Linguistics, Humboldt University</li>
 		  <li>Grants from the Pacific Fund, Faculty Research Committee,  College Research Fund, and Department of Religious and Classical Studies at the University of the Pacific
 		    </p>
@@ -43,15 +45,14 @@
 </ul>
 		<p><a name="team" id="team"></a>The Coptic SCRIPTORIUM research team includes:</p>
 <ul>
-          <li>Rebecca S. Krawiec,  Canisius College, editor and encoder/annotator (2013-)</li>
+          <li>Rebecca S. Krawiec,  Canisius College, <a href="https://korpling.german.hu-berlin.de/annis3/scriptorium#_q=dG9rCiYgbWV0YTo6YW5ub3RhdGlvbiA9IC8uKktyYXdpZWMuKi8&amp;_c=U2hlbm91dGUuYTIyLGFicmFoYW0ub3VyLmZhdGhlcixhcG9waHRoZWdtYXRhLnBhdHJ1bS4xMSxTYWhpZGljYS5NYXJrLjEtNixCZXNhLmxldHRlcnM&amp;cl=5&amp;" target="new">editor and encoder/annotator</a>, <a href="https://korpling.german.hu-berlin.de/annis3/scriptorium#_q=dG9rCiYgbWV0YTo6dHJhbnNsYXRpb24gPSAvLipLcmF3aWVjLiov&amp;_c=U2hlbm91dGUuYTIyLGFicmFoYW0ub3VyLmZhdGhlcixhcG9waHRoZWdtYXRhLnBhdHJ1bS4xMSxTYWhpZGljYS5NYXJrLjEtNixCZXNhLmxldHRlcnM&amp;cl=5&amp;" target="new">translator</a> (2013-)</li>
           <li>Christine Luckritz Marquis,  editor and encoder/annotator (2014-)</li>
-          <li>Elizabeth Platte, Kalamazoo College, editor and encoder/annotator (2013-)</li>
+          <li>Elizabeth Platte, Kalamazoo College, <a href="https://korpling.german.hu-berlin.de/annis3/scriptorium#_q=dG9rICYgbWV0YTo6YW5ub3RhdGlvbiA9IC8uKlBsYXR0ZS4qLw&amp;_c=U2hlbm91dGUuYTIyLGFicmFoYW0ub3VyLmZhdGhlcixhcG9waHRoZWdtYXRhLnBhdHJ1bS4xMSxTYWhpZGljYS5NYXJrLjEtNixCZXNhLmxldHRlcnM&amp;" target="new">editor and encoder/annotator</a> (2013-)</li>
+          <li>Eliese-Sophia Lincke, Humboldt University (2014-)</li>
+          <li>So Miyagawa, Kyoto University (2014-)</li>
           <li>Bridget Almas, programmer (2014-)</li>
           <li>Gernot Höflechner, programmer (2014-)</li>
-          <li>Yanrui Liu,  M.A. University of the Pacific; Repository manager (2014-)</li>
-          <li>Lauren McDermott, the University of the Pacific student; TEI encoder and HTML programmer (2013-) </li>
-          <li>Janet Timbie, the Catholic University of America (2013); editor and annotator</li>
-          <li>Alex Dickerson, the University of the Pacific, student; TEI encoder and programmer (2013)</li>
+          <li>Janet Timbie, the Catholic University of America (2013); <a href="https://korpling.german.hu-berlin.de/annis3/scriptorium#_q=dG9rICYgbWV0YTo6YW5ub3RhdGlvbiA9IC8uKlRpbWJpZS4qLw&amp;_c=U2hlbm91dGUuYTIyLGFicmFoYW0ub3VyLmZhdGhlcixhcG9waHRoZWdtYXRhLnBhdHJ1bS4xMSxTYWhpZGljYS5NYXJrLjEtNixCZXNhLmxldHRlcnM&amp;" target="new">editor and annotator</a></li>
         </ul>
         <p> Advisory Board:</p>
 		<ul>
@@ -61,7 +62,7 @@
 		</ul>
 <p>C. Schroeder and A. Zeldes gratefully acknowledge the following individuals and organizations for their contributions to the project:</p>
 <ul>
-  <li>The Corpus dei Manoscritti Copti Letterari (Coptic lexicon and other materials)</li>
+  <li>The <a href="http://cmcl.aai.uni-hamburg.de/" target="new">Corpus dei Manoscritti Copti Letterari</a> (Coptic lexicon and other materials)</li>
   <li>Stephen Emmel, University of Münster</li>
           <li>Eric E. Johnson</li>
           <li>Tito Orlandi, Ph.D., Sapienza University, Rome; the University of Hamburg</li>
@@ -77,18 +78,18 @@
   <li><a href="http://www.perseus.org" target="new">Perseus Digital Library</a></li>
   <li><a href="http://www.dh.uni-leipzig.de/wo/open-philology-project/" target="new">Open Philology</a></li>
   <li><a href="https://korpling.german.hu-berlin.de/p/projects/saltnpepper/wiki/" target="new">SaltNPepper</a></li>
+  </ul>
+<p>Former members of our  team:</p>
+<ul>
+  <li>Yanrui Liu,  M.A. University of the Pacific; repository manager (2014)</li>
+  <li>Lauren McDermott, the University of the Pacific student; TEI encoder and HTML programmer (2013-14)</li>
+  <li>Alex Dickerson, the University of the Pacific, student; TEI encoder and programmer (2013)</li>
 </ul>
-<p><a href="index.html">Return to the main Coptic Scriptorium page</a>
-</p>
-<p>&nbsp;</p>
-<p><br />
-  <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Text on this page licensed under the Creative Commons Attribution 3.0 Unported License. <br/>
-    <br/>
-  <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/88x31.png" /></a>
-</p>
-</p>
-<p><a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.</p>
-<p>Page last updated 29 August 2014</p>
+<p><a href="index.html">Return to the main Coptic Scriptorium page</a></p>
+<p><img src="img/GitHub-Mark-32px.png" alt="GitHub_mark" longdesc="www.github.com"/><a href="https://github.com/CopticScriptorium" target="new"> Fork us on GitHub</a>.<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><br />
+  Text on this page licensed under the Creative Commons Attribution 3.0 Unported License.  <img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/88x31.png" /></a></p>
+  <p><a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.</p>
+  <p>Page last updated 5 September 2014.</p>
 </div>
 </body>
 </html>		
