edited typo in acknowledgments link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				and<span > </span><a
 				href="http://corpling.uis.georgetown.edu/amir/"
 				shape="rect">Amir
-		Zeldes</a><span > </span>(Georgetown University). <a href="acknowledgements.html#team">The team is constantly growing.</a></p>
+		Zeldes</a><span > </span>(Georgetown University). <a href="acknowledgments.html#team">The team is constantly growing.</a></p>
 		<p>Coptic SCRIPTORIUM provides a platform for interdisciplinary and computational research
 			in texts in the Coptic language, particularly the Sahidic dialect.  As an open-source,
 			open-access initiative, the SCRIPTORIUM technologies and corpus function as a
