--- a/workshop2013/workshop2013.html
+++ b/workshop2013/workshop2013.html
@@ -10,12 +10,15 @@
 </head>
 
 <body>
-	<table><tr><td><img alt="Seal of the University of the Pacific" align="left" src="../img/Seal_Orange_RGB.png" height="100px" style="position:inline"/></td><td valign="bottom">
-		 <h1>Coptic Scriptorium</h1> </td><td>
-		<img alt="Humboldt-Universität zu Berlin" align="right" src="../img/hu_korpling_big.svg" height="100px" style="position:inline"/></td>
-	</tr>
+<div id="wrapper">
+     <table width=100%><tr>
+	  <td width="210" rowspan="3" valign="bottom"><a href="#imageCredit"><img src="../img/PierpontMorganUnicornDetail_m581.010ra_xsm.jpg" width="211" height="150" alt="PierpontMorgan" longdesc="../img/PierpontMorganUnicornDetail_m581.010ra.jpg" /></a></td>
+      <td width="15"> </td>
+	  <td width="77%" valign="bottom"><h1>Coptic Scriptorium</h1>
+      <img alt="Seal of the University of the Pacific" align="left" src="../img/Seal_Orange_RGB.png" height="62px" longdesc="http://www.pacific.edu"/>                 <img src="../img/Georgetown_university_seal.gif" width="52" height="62px" alt="GeorgetownUniversitySeal" longdesc="http://www.georgetown.edu"/>       <img src="../img/neh_logo_horizontal_rgb.jpg" width="252" height="62px" alt="neh logo" longdesc="http://www.neh.gov"/></td>
+    </tr>
 		</table>
-	
+
 	<p></p>
 		<h3>Workshop on Digital and Computational Scholarship in the Coptic Language</h3>
 <h4>Hosted by the University of the Pacific (Stockton, California) and Humboldt University (Berlin)</h4>
@@ -65,10 +68,12 @@ Daniel Werning (Humboldt University, Institute for Archaeology)<br />
 <a href="http://www.gwdg.de/~dwernin/drafts/Werning-Rubensohn_Projekt-Beispieldatensatz-TEI.pdf" target="new">http://www.gwdg.de/~dwernin/drafts/Werning-Rubensohn_Projekt-Beispieldatensatz-TEI.pdf</a> <br />
   <br />
 </p>
-<p><a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Licensed under the Creative Commons Attribution 3.0 Unported License. <br/>
-  <br/>
-	    <br/>
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/88x31.png" /></a></p>
-<p>Page last updated 16 May 2013</p>
+	<p></p>
+		<p><img src="../img/GitHub-Mark-32px.png" alt="GitHub_mark" longdesc="www.github.com"/><a href="https://github.com/CopticScriptorium" target="new"> Fork us on GitHub</a>.<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><br />
+		  Text on this page licensed under the Creative Commons Attribution 3.0 Unported License.  <img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/88x31.png" /></a></p>
+		<p><a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.</p>
+		<p>Page last updated 5 September 2014.</p>
+    </div>
+    </div>
 </body>
 </html>
