--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 	</ul></li>
 <li>Documentation
 	<ul>
-		<li><a href="SCRIPTORIUMDiplTranscriptionGuidelines.pdf" target="new">Diplomatic Transcription Guidelines</a>(version 1.1.0)</li>
+		<li><a href="http://coptic.pacific.edu/download/tools/SCRIPTORIUMDiplTranscriptionGuidelines.pdf" target="new">Diplomatic Transcription Guidelines</a>(version 1.1.0)</li>
 		<li>Tokenization Guidelines (see sections 3 &amp; 4 of the Transcription Guidelines)</li>
-		<li><a href="scriptorium_tagset_documentation.pdf" target="new">Part-of-Speech Tagging Guidelines (version 1.1.0)</a></li>
+		<li><a href="http://coptic.pacific.edu/download/tools/scriptorium_tagset_documentation.pdf" target="new">Part-of-Speech Tagging Guidelines (version 1.1.0)</a></li>
 	</ul>
 </li>
 </ul>
