--- a/index.html
+++ b/index.html
@@ -265,6 +265,11 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 </li>
 </ul>
 
+<h3>Additional Annotation Tools</h3>
+<ul>
+  <li><a href="https://github.com/CopticScriptorium/normalizer/releases/latest" target="_blank">Normalizer</a> (normalizes orthography, removes diacritics)</li>
+  <li><a href="https://github.com/CopticScriptorium/lexical-taggers/releases/tag/1.22" target="_blank">Language of origin tagger</a> (to annotate loan words from Greek, Latin, Hebrew/Greco-Hebrew, Aramaic)</li>
+</ul>
 <h3>Converters</h3>
 <ul>
 	<li>Coptic encoding converter (converts older text character systems used for fonts such as Coptic and Laser Coptic into standards-compliant Coptic Unicode characters)
@@ -285,7 +290,7 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 		<li><a name="imageCredit" id="imageCredit"></a>The image on this page is a detail of <a href="http://corsair.themorgan.org/cgi-bin/Pwebrecon.cgi?SC=CallNumber&amp;SEQ=20140706123219&amp;PID=_ypu8IgXI8anIMTNU3GezV90EmX&amp;SA=MS+M.0581,+fol.+010r">MS M.0581, fol. 010r</a> at the Pierpont Morgan Library, available at <a href="http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg" target="new">http://corsair.morganlibrary.org/icaimages/5/m581.010ra.jpg</a>, for non-commercial use only.</li>
 	</ul>
 	<p>The project is supported by the <a href="http://www.neh.gov" target="_blank">National Endowment for the Humanities</a> <a href="http://www.neh.gov/divisions/odh" target="_blank">Office of Digital Humanities</a> and <a href="http://www.neh.gov/divisions/preservation" target="_blank">Division of Preservation and Access</a>, the <a href="www.pacific.edu" target="blank">University of the Pacific</a>, <a href="http://www.georgetown.edu" target="_blank">Georgetown University</a>, and <a href="http://www.hu-berlin.de" target="_blank">Humboldt University</a>. </p>
-	<p>Page last updated 5 September 2014</p>
+	<p>Page last updated 25 September 2014</p>
     </div>
     
     </body>
