updating html viz

--- a/download/corpora/AP/AP.90.olympius_dipl.test.html
+++ b/download/corpora/AP/AP.90.olympius_dipl.test.html
@@ -8,13 +8,11 @@
 
 	<title>AP.90.olympius - diplomatic</title>
 	<link rel="stylesheet" href="dipl.css" type="text/css" charset="utf-8"/>
-<!--October 6, 2014 by Caroline T. Schroeder-->
+
 </head>
 
 <body>
-<div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;"><div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w" style="display: inline-block;">
-
-<div class="copt_line" line="1"><!--
+<div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;"><div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w" style="display: inline-block;"><table class="<div class="copt_line" line="1"><!--
 --><span>…ⲛ</span><!-- end of "" --><span>ⲟⲩⲁ</span><!-- end of "" --><span>ⲛ̇</span><!-- end of "" --><span>ⲛ̇</span><!-- end of "" --><span>ϩⲗ̇ⲗⲟ</span><!-- end of "" --><span>·</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="2"><!--
 --><span>..</span><!-- end of "" --><span>ⲙ</span><!-- end of "" --><span>.</span><!-- end of "" --><span>ⲁ</span><!-- end of "" --><span>ϥ</span><!-- end of "" --><span>ⲛⲁⲩ</span><!-- end of "" --><span>ⲉ</span><!-- end of "" --><span>ⲧⲉϥ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="3"><!--
 --><span>[ϭⲓ]ⲛ</span><!-- end of "" --><span>ⲱ̇ⲛⲁϩ</span><!-- end of "" --><span>·</span><!-- end of "" --><span>ⲁⲩⲱ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="4"><!--
@@ -49,9 +47,6 @@
 --><span>ⲁⲩⲱ̇</span><!-- end of "" --><span>ⲡⲉϫⲁ</span><!-- end of "" --><span>ⲩ</span><!-- end of "" --><span>ϫⲉ</span><!-- end of "" --><span>ⲙ̇</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="33"><!--
 --><span>ⲙⲉⲉ̇ⲩⲉ̇</span><!-- end of "" --><span>ⲉ̇ⲑ</span><!-- end of "" --><span>ⲟⲟⲩ</span><!-- end of "" --><span>ⲛⲁⲙⲉ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="34"><!--
 --><span>ⲛⲉ</span><!-- end of "" --><span>ϣⲁ</span><!-- end of "" --><span>ⲩ</span><!-- end of "" --><span>ⲡⲟⲣϫ̇</span><!-- end of "" --><span>ⲛ̇</span><!-- end of "" --><span>ⲉ̇</span><!-- end of "" --><span>ⲡ</span><!-- end of "" --></div><!-- end of "copt_line" --><div class="copt_line" line="35"><!--
---><span>ⲛⲟⲩⲧⲉ</span><!-- end of "" --><span>.</span><!-- end of "" --><span>ⲻ</span><!-- end of "" --></div><!-- end of "copt_line" --></div>
-
-
-</div><div class="v-panel-deco v-panel-deco-corpus-font" style="margin-bottom: 0px;"></div></div></div>
+--><span>ⲛⲟⲩⲧⲉ</span><!-- end of "" --><span>.</span><!-- end of "" --><span>ⲻ</span><!-- end of "" --></div><!-- end of "copt_line" --></div></div><div class="v-panel-deco v-panel-deco-annis-wrapped-htmlvis-apophthegmata_patrum v-panel-deco-corpus-font-force" style="margin-bottom: 0px;"></div></div><div class="v-panel-deco v-panel-deco-corpus-font" style="margin-bottom: 0px;"></div></div></div>
 </body>
 </html>
