--- a/download/corpora/AP/AP.90.olympius_norm.test.html
+++ b/download/corpora/AP/AP.90.olympius_norm.test.html
@@ -8,11 +8,12 @@
 
 	<title>AP.90.olympius - normalized</title>
 	<link rel="stylesheet" href="norm.css" type="text/css" charset="utf-8"/>
+
 </head>
 
 <body>
 <div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;"><div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w" style="display: inline-block;">
-<!--October 6, 2014 by Caroline T. Schroeder-->
+
 <span class="word"><!--
 --><span class="norm">…ⲛ</span><!-- end of "norm" --></span><!-- end of "word" --><t class="translation" title="one of the elders"><!--
 --><span class="word"><!--
@@ -111,7 +112,10 @@
 --><span class="norm">ⲛⲁⲙⲉ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲛⲉ</span><!-- end of "norm" --><span class="norm">ϣⲁ</span><!-- end of "norm" --><span class="norm">ⲩ</span><!-- end of "norm" --><span class="norm">ⲡⲟⲣϫ</span><!-- end of "norm" --><span class="norm">ⲛ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲉ</span><!-- end of "norm" --><span class="norm">ⲡ</span><!-- end of "norm" --><span class="norm">ⲛⲟⲩⲧⲉ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">.</span></span></t><!-- end of "translation" --><!-- end of "norm" --><!-- end of "word" --></div>
+--><span class="norm">.</span></span></t><!-- end of "translation" --><!-- end of "norm" --><!-- end of "word" --></div></div><div class="v-panel-deco v-panel-deco-annis-wrapped-htmlvis-apophthegmata_patrum v-panel-deco-corpus-font-force" style="margin-bottom: 0px;"></div></div>
+
+
+
 </div><div class="v-panel-deco v-panel-deco-corpus-font" style="margin-bottom: 0px;"></div></div></div>
 </body>
 </html>
