updated html viz + index files

--- a/download/corpora/AP/AP.90.olympius_analytic.html
+++ b/download/corpora/AP/AP.90.olympius_analytic.html
@@ -9,10 +9,20 @@
 	<title>AP.90.olympius - analytic</title>
 	<link rel="stylesheet" href="analytic.css" type="text/css" charset="utf-8"/>
 </head>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-55145025-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 <body>
 <!--October 6, 2014 by Caroline T. Schroeder-->
-<div class="v-panel-content v-scrollable" tabindex="-1" style="position: relative;"><div class="docviewer v-widget annis-wrapped-htmlvis-apophthegmata_patrum docviewer-annis-wrapped-htmlvis-apophthegmata_patrum corpus-font-force docviewer-corpus-font-force v-has-width" style="overflow: hidden; width: 100%; padding-top: 23px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -23px;"><div class="v-panel-caption v-panel-caption-annis-wrapped-htmlvis-apophthegmata_patrum v-panel-caption-corpus-font-force"><span>apophthegmata.patrum &gt; AP.90.olympius - Visualizer: linguistic analysis (document)</span></div></div><div class="v-panel-content v-panel-content-annis-wrapped-htmlvis-apophthegmata_patrum v-panel-content-corpus-font-force v-scrollable" tabindex="-1" style="position: relative;"><div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><span class="copt_word"><!--
+<div class="v-panel-content v-panel-content-annis-wrapped-htmlvis-apophthegmata_patrum v-panel-content-corpus-font-force v-scrollable" tabindex="-1" style="position: relative;"><div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><span class="copt_word"><!--
 --><ruby class="norm">…ⲛ<!--
 --><rt class="pos" pos="UNKNOWN"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><div class="translation" trans="one of the elders"><!--
 --><span class="copt_word"><!--
