updates to Mark and Besa html files

--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@ project is licensed under the <a rel="license" href="http://creativecommons.org/
 				<li><input class="dl" type="button" id="mrk-dl2"/><label class="dl" for="mrk-dl2"><a href="download/corpora/Sahidica.Mark.1-6_relANNIS.zip">relANNIS</a></label></li>
 			</ul>
 			</li>
-<li><input class="folder" type="checkbox" id="mrk-top" /><label class="folder" for="mrk-top">Individual documents in TEI XML as well as diplomatic, normalized, and analytic versions in HTML (analytic works in Chrome or Safari only):</label>
+<li><input class="folder" type="checkbox" id="mrk-top" />
+<label class="folder" for="mrk-top">Individual documents in TEI XML as well as  normalized version in HTML (analytic works in Chrome or Safari only):</label>
 		<ul>
 		  <li><input type="button" class="doc" id="mrk-1"/><label class="doc" for="mrk-1">Chapter 1:</label> <a href="download/corpora/Mark/Mark_1_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark1_chapter.html" target="_blank">HTML</a></li>
 		  <li><input type="button" class="doc" id="mrk-2"/><label class="doc" for="mrk-2">Chapter 2:</label> <a href="download/corpora/Mark/Mark_2_TEI.xml" target="_blank">download TEI XML</a>, <a href="download/corpora/Mark/Sahidica.Mark2_chapter.html" target="_blank">HTML</a></li>
